# Computer-Graphics-nycu2021

HW0/: .clang-format  CMakeLists.txt  README.md
HW0/cmake/cputest/: avx.cpp  avx2.cpp  avx512.cpp
HW0/include/: context_manager.h  utils.h
HW0/src/: CMakeLists.txt  context_manager.cpp  main.cpp
HW0/vs2019/: HW0.sln  HW0.vcxproj  HW0.vcxproj.filters
HW0/vs2019/glfw/: glfw.vcxproj  glfw.vcxproj.filters
HW1/include/shape/: cube.h  shape.h
HW1/src/: CMakeLists.txt  context_manager.cpp  main.cpp
HW1/src/camera/: camera.cpp  quat_camera.cpp
HW1/src/shape/: cube.cpp
HW2/assets/shader/: gouraud.frag  gouraud.vert  phong.frag  phong.vert  shadow.vert
HW2/src/: CMakeLists.txt  main.cpp
HW2/src/camera/: quat_camera.cpp
HW2/src/light/: directionallight.cpp
HW3/assets/shader/: calculatenormal.frag  fresnel.frag  fresnel.vert  normalmap.frag  normalmap.vert  skybox.vert
HW3/src/: main.cpp
hw1/include/: utils.h
hw1/include/camera/: camera.h  quat_camera.h
hw2/assets/shader/: shadow.frag
hw2/src/light/: pointlight.cpp
